--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-reanimated": "^1.2.0",
+    "react-native-screens": "^2.0.0-alpha.1",
     "react-native-status-bar-height": "^2.4.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.0.0"
+    "react-native-webview": "^7.0.4",
+    "react-navigation": "^4.0.0",
+    "react-navigation-tabs": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
